<package>
  <!--REQUIRED HEADER-->
  <name>steam</name>
  <description>
    The Simultaneous Trajectory Estimation and Mapping (STEAM) Engine.
  </description>
  <version>0.2.0</version>
  <maintainer email="sean.anderson@mail.utoronto.ca">Sean Anderson</maintainer>
  <license>BSD</license>

  <!--BUILD TOOL DEPENDENCIES-->
  <buildtool_depend>catkin</buildtool_depend>

  <!--BUILD DEPENDENCIES-->
  <build_depend>LGMath</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>OpenMP</build_depend>

  <!--RUNTIME DEPENDENCIES-->
  <!-- run_depend></run_depend -->

  <!--TEST DEPENDENCIES-->
  <!-- test_depend></test_depend -->
</package>
