<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steam</name>
  <version>1.1.0</version>
  <description>
    The Simultaneous Trajectory Estimation and Mapping (STEAM) Engine.
  </description>
  <maintainer email="sean.anderson@mail.utoronto.ca">Sean Anderson</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>eigen</depend>
  <depend>OpenMP</depend>
  <depend>lgmath</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
